--- a/style.css
+++ b/style.css
@@ -710,6 +710,7 @@ a img {
   .menu-primary-items ul {
     position: absolute;
     top: -9999px;
+    z-index: 9;
     opacity: 0;
     left: -70%;
     right: -70%;
